# medfly_2026

./: .env  README.md  alembic.ini  pyproject.toml  requirements.txt
alembic/: README  env.py
alembic/versions/: 05cc91d5bf19_initial_migration.py  0bb49954b1cc_add_parent_id_column_to_hospital_table.py  15735b6d7859_add_hashed_password_to_users.py  7bfb5335d207_update_medifile_model_to_snapshots.py  7fce09026ece_added_login_name_in_user_table_migration.py  fe93cfb5e4bb_initial_migration.py
app/: main.py  rq_launcher.py  socket_server.py  worker.py
app/models/: __init__.py  all_models.py  database.py
app/routers/: dashboard.py  departments.py  devices.py  hospitals.py  insights.py  live-streaming.py  patient_registration.py  procedures.py  recordings.py  roles.py  snapshots.py  turnservers.py  users.py  webrtc_signaling.py
app/schemas/: all.py
app/static/: style.css  video.js
app/tasks/: sup_upload_tasks.py
app/templates/: video.html
app/utils/: deps.py  security.py
